fix: removed commented ruleset, cleaned up spacing

--- a/packages/swarm-docs/src/assets/docs.css
+++ b/packages/swarm-docs/src/assets/docs.css
@@ -11,14 +11,23 @@ h1.docs-title a {
   color: var(--color-gray-5);
 }
 
+
+/* Swarm Typography Overrides */
+.text--pageTitle {
+  color: var(--color-gray-6);
+  margin: 80px 0 10px;
+}
+.text--body {
+  margin: 0 0 10px;
+}
+
+
+/* Page Layout */
 .main {
   margin: 0 0 90px 320px;
   width: 810px;
 }
 
-
-
-/* Left Navigation */
 .left-nav {
   position: fixed;
   top: 0;
@@ -28,6 +37,7 @@ h1.docs-title a {
   padding: 40px 30px 30px;
   background: var(--color-gray-1);
 }
+
 .left-nav ul,
 .left-nav li {
   list-style: none;
@@ -42,6 +52,7 @@ h1.docs-title a {
 .left-nav a:hover {
   color: var(--color-gray-6);
 }
+
 .swarm-logo {
   display: block;
   margin: 0 auto var(--size-space-double);
@@ -56,13 +67,10 @@ h1.docs-title a {
   margin-left: -5px;
 }
 
-
-
 .props-table thead,
 .props-table tbody {
   width: 100%;
 }
-
 
 .props-table th{
   border-bottom: 2px solid var(--color-indigo);
@@ -86,10 +94,6 @@ h1.docs-title a {
   font-size: var(--font-size-small);
 }
 
-.props-table tr:hover {
-  /*background-color: var(--color-gray-1);*/
-}
-
 .props-table .text-code {
   font-family: monospace;
   background-color: var(--color-gray-2);
@@ -97,32 +101,27 @@ h1.docs-title a {
   color: var(--color-gray-7);
   padding: 3px 5px;
 }
+
 .props-table .text-required {
   color: var(--color-alert-red);
 }
+
 .props-table .text-highlight {
   color: var(--color-marigold);
 }
 
 
+/* Prism Code editor */
+pre.prism-code {
+  overflow: scroll;
+  padding: 20px 15px 30px;
+}
+
+
+/* Use this class for placeholder images - delete later */
 .temp-image {
   width: 100%;
   height: 180px;
   background-color: var(--color-gray-1);
   margin: 30px 0;
-}
-
-/* Typography Overrides */
-.text--pageTitle {
-  color: var(--color-gray-6);
-  margin: 80px 0 10px;
-}
-.text--body {
-  margin: 0 0 10px;
-}
-
-/* Prism Code editor */
-pre.prism-code {
-  overflow: scroll;
-  padding: 20px 15px 30px;
 }
